--- a/bmiCalculator.html
+++ b/bmiCalculator.html
@@ -9,9 +9,9 @@
 <body>
     <h1>BMI Calculator</h1>
     <form action="" method="post">
-        <input type="text" name="num1" placeholder="weight">
-        <input type="text" name="num2" placeholder="height"> <br> <br>
-        <button type="submit" name="submit">Calculate BMI</button>
+        <input type="text" name="weight" placeholder="weight">
+        <input type="text" name="height" placeholder="height"> <br> <br>
+        <button type="submit">Calculate BMI</button>
     </form>
 </body>
 </html>
